@@ -20,6 +20,7 @@ class ShadedJarSmokeTest {
     private static Process start(Path localAppData, String... arguments) throws Exception {
         var command = new ArrayList<String>();
         command.add(JAVA.toString());
+        command.add("--enable-preview");
         command.add("-Duser.home=" + localAppData);
         command.add("-jar");
         command.add(JAR.toString());
@@ -51,44 +52,44 @@ class ShadedJarSmokeTest {
         Path testClasses = Path.of(H2ServiceLoaderProbeMain.class.getProtectionDomain().getCodeSource().getLocation().toURI());
         Path database = Files.createTempDirectory("h2-service-loader-smoke").resolve("smoke");
         String classpath = testClasses + java.io.File.pathSeparator + JAR;
-        var process = new ProcessBuilder(JAVA.toString(), "--illegal-native-access=deny", "-cp", classpath, H2ServiceLoaderProbeMain.class.getName(), database.toString(), JAR.toString()).start();
         String stdout;
         String stderr;
-        try (var output = new BufferedReader(new InputStreamReader(process.getInputStream()));
+        try (var process = new ProcessBuilder(JAVA.toString(), "--enable-preview", "--illegal-native-access=deny", "-cp", classpath, H2ServiceLoaderProbeMain.class.getName(), database.toString(), JAR.toString()).start();
+             var output = new BufferedReader(new InputStreamReader(process.getInputStream()));
              var errors = new BufferedReader(new InputStreamReader(process.getErrorStream()))) {
             stdout = output.lines().collect(java.util.stream.Collectors.joining("\n"));
             stderr = errors.lines().collect(java.util.stream.Collectors.joining("\n"));
+            assertEquals(0, process.waitFor());
         }
 
-        assertEquals(0, process.waitFor());
         assertEquals("H2_SERVICE_OK", stdout);
         assertEquals("", stderr);
     }
 
     @Test
     void shadedJarPrintsItsManifestVersion() throws Exception {
-        var process = new ProcessBuilder(JAVA.toString(), "-jar", JAR.toString(), "--version").redirectErrorStream(true).start();
         String output;
-        try (var reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+        try (var process = new ProcessBuilder(JAVA.toString(), "--enable-preview", "-jar", JAR.toString(), "--version").redirectErrorStream(true).start();
+             var reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
             output = reader.readLine();
+            assertEquals(0, process.waitFor());
         }
 
-        assertEquals(0, process.waitFor());
         assertEquals(System.getProperty("mcdevMcpVersion"), output);
     }
 
     @Test
     void shadedJarStartsWithNativeAccessDeniedWithoutWarnings() throws Exception {
-        var process = new ProcessBuilder(JAVA.toString(), "--illegal-native-access=deny", "-jar", JAR.toString(), "--version").start();
         String stdout;
         String stderr;
-        try (var output = new BufferedReader(new InputStreamReader(process.getInputStream()));
+        try (var process = new ProcessBuilder(JAVA.toString(), "--enable-preview", "--illegal-native-access=deny", "-jar", JAR.toString(), "--version").start();
+             var output = new BufferedReader(new InputStreamReader(process.getInputStream()));
              var errors = new BufferedReader(new InputStreamReader(process.getErrorStream()))) {
             stdout = output.readLine();
             stderr = errors.lines().collect(java.util.stream.Collectors.joining("\n"));
+            assertEquals(0, process.waitFor());
         }
 
-        assertEquals(0, process.waitFor());
         assertEquals(System.getProperty("mcdevMcpVersion"), stdout);
         assertEquals("", stderr);
     }
